<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--TODO 1: Add a text field that displays the results-->
    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:gravity="bottom|end"
        android:padding="16dp"
        android:text=""
        android:textColor="#757272"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/tvDisplay1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:gravity="bottom|end"
        android:padding="16dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <!--TODO 2: Add all the buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/ac"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOpeningBracket"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/Lbracket"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvClosingBracket"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/Rbracket"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDivide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/div"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMultiply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/mutli"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSubstract"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/sub"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAdd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDecimal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBackspace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:text="@string/backspace"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEquals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="12dp"
                android:background="@drawable/round_equal"
                android:gravity="center"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <!--TODO 3: Add all the functionalities-->

</androidx.constraintlayout.widget.ConstraintLayout>